# DCVC

./: .flake8  .gitignore  NOTICE .txt  NOTICE.txt  README.md  azure-pipelines.yml  compare_bd_rate.py  dataset_config_example.json  requirements.txt  test_compress_time.py  test_conditions.md  test_video.py  train_image.py  train_video.py  training.md  write_stream_readme.md
.github/workflows/: codeql-analysis.yml  shift-left-trial.yml  shiftleft.yml
ACMMM2022/: README.md  dataset_config_example.json  test_video.py
ACMMM2022/checkpoints/: download.py
CVPR2023/: README.md  dataset_config_example_yuv420.json
DCVC/: dataset_config_example.json
DCVC-DC/: README.md  convert_encoder_decoder_models.py  requirements.txt  submit_encoder_decoder_models.py  test_video.py  test_video_encoder_decoder_entropycoder_split.py  test_video_mlmodel.py  trace_dmc.py
DCVC-DC/src/cpp/py_rans/: CMakeLists.txt
DCVC-DC/src/cpp/rans/: CMakeLists.txt  rans.cpp
DCVC-FM/: README.md  test_video.py
DCVC-HEM/: README.md  requirements.txt
DCVC-RT/: README.md  dataset_config_example_yuv420.json  test_video.py
DCVC-TCM/: recommended_test_full_results_IP12.json
DCVC-family/: README.md
DCVC-family/DCVC/: test_video.py
DCVC-family/DCVC-DC/: README.md  requirements.txt  test_data_to_png.py  test_video.py
DCVC-family/DCVC-FM/: README.md  dataset_config_example_rgb.json  dataset_config_example_yuv420.json  requirements.txt
DCVC-family/DCVC-HEM/: README.md
DCVC-family/DCVC-RT/: README.md
DCVC-family/DCVC-TCM/: README.md  recommended_test_full_results_IP32.json
DCVC-family/EVC/: README.md  requirements.txt  run_test_image.py  test_image.py
DCVC/checkpoints/: download_compressai_models.py
EVC/src/cpp/: CMakeLists.txt
EVC/src/cpp/py_rans/: py_rans.cpp
ICLR2023/: model_complexity.py  requirements.txt
NeurIPS2021/: requirements.txt
TMM_TCMVC/: README.md  test_video.py
anchors/: vtm_17.0_yuv420_LB_allf_ip0.json
test_cfg/: all_RGB.json  all_yuv420.json  runtime_avg.json
(+203 files in other folders)
